# project-boilerplate

./: .env.template  .gitignore  Makefile  README.md  docker-compose.backend.dev.yml  docker-compose.dev.yml
backend/: README.md  backend.dockerfile
backend/app/: pyproject.toml
backend/app/app/: config.py  main.py
backend/app/app/api/: api_router.py
backend/app/app/api/endpoints/: endpoint_hello.py
